# ISA_movielens_recsys

./: .gitignore  Makefile  README.md  project2_popis.md  pyproject.toml  requirements.txt
analysis/: project-analysis.md  todo-for-agent.md
docs/: mkdocs.yml
docs/docs/: index.md
models/: cold_start_model.pkl
notebooks/: 01_movielens_recsys.ipynb  02_steam_recsys.ipynb
project1/: __init__.py  dataset.py  features.py  plots.py
project1/modeling/: predict.py  train.py
project2/: config.py  dataset.py  plots.py
project2/modeling/: data_prep.py  evaluate.py  model.py  train.py  tune.py
