[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project1"
version = "0.0.1"
description = "This is a first project for the ISA course focused on recsys implementation with movielens dataset."
authors = [
  { name = "Patreax" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "loguru",
    "python-dotenv",
    "tqdm",
    "typer",
    "pandas",
    "numpy<2",
    "scikit-surprise",
    "scikit-learn",
    "optuna",
    "matplotlib",
    "seaborn",
    "jupyter",
    "joblib",
]


[tool.ruff]
line-length = 99
src = ["project1"]
include = ["pyproject.toml", "project1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["project1"]
force-sort-within-sections = true

