[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isa-recsys"
version = "0.0.1"
description = "ISA course recsys projects."
authors = [
  { name = "Patreax" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "loguru",
    "python-dotenv",
    "tqdm",
    "typer",
    "pandas>=3.0.2",
    "numpy<2",
    "scikit-surprise",
    "scikit-learn",
    "optuna",
    "matplotlib",
    "seaborn",
    "jupyter",
    "joblib",
    "ijson",
    "orjson",
    "pyarrow",
    "torch",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["project1*", "project2*"]

[tool.ruff]
line-length = 99
src = ["project1", "project2"]
include = ["pyproject.toml", "project1/**/*.py", "project2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["project1", "project2"]
force-sort-within-sections = true
